--- a/src/styles/Scoreboard.scss
+++ b/src/styles/Scoreboard.scss
@@ -1,6 +1,7 @@
 .score{
     font-size: 2rem;
-
+    padding-top: 2rem;
+    
     display: flex;
     justify-content: space-evenly;
     align-items: center;
