added card and background css

--- a/src/styles/WinScreen.scss
+++ b/src/styles/WinScreen.scss
@@ -20,7 +20,7 @@
     color:white;
     font-size: 2rem;
     z-index: 2;
-    background-color: #9e9e9e;
+    background-color: #474747;
 
     button{
         font-size: 1.5rem;
