--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -17,6 +17,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -25,6 +26,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	margin: 0;
+	background-color: #6A528C;
 }
 ol, ul {
 	list-style: none;
