--- a/src/styles/Card.scss
+++ b/src/styles/Card.scss
@@ -1,7 +1,14 @@
-
 .catCard{
     overflow:hidden;
-    width: 400px;
-    height: 400px;
+    width: 40vh;
+    height: 40vh;
     margin: 1em;
+    background-color: #160d15;
+    border-radius: 2rem;
+    
+    img{
+        height: 100%;
+        width: 100%;
+        object-fit: contain;
+    }
 }
