--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -44,3 +44,11 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+.appScreen{
+	margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
