--- a/src/styles/Scoreboard.scss
+++ b/src/styles/Scoreboard.scss
@@ -1,8 +1,13 @@
 .score{
     font-size: 2rem;
-    padding-top: 1rem;
+    padding: 1rem 0;
     
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+
+    border: 1px solid black;
+    border-radius: 25px;
+    width: 40%;
+    background-color: rgba(103, 57, 168) ;
 }
